RESOLVED FIXED240628
WebAccessibilityObjectWrapperMac::detachIsolatedObject should not unregister the wrapper for AccessibilityDetachmentType::ElementChanged detachments
https://bugs.webkit.org/show_bug.cgi?id=240628
Summary WebAccessibilityObjectWrapperMac::detachIsolatedObject should not unregister ...
Tyler Wilcock
Reported 2022-05-18 22:06:36 PDT
This causes AX clients to think the wrapper is destroyed, when that is not true.
Attachments
Radar WebKit Bug Importer
Comment 1 2022-05-18 22:06:47 PDT
Tyler Wilcock
Comment 2 2022-05-18 22:11:43 PDT
EWS
Comment 3 2022-05-20 10:14:27 PDT
Committed r294552 (250805@main): <https://commits.webkit.org/250805@main> Reviewed commits have been landed. Closing PR #767 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.